# templet-test

./: CMakeLists.txt  README.md
src/: error_parser.cpp  error_parser.hpp  stream_client.cpp  stream_server.cpp
src/engine/: engine.cpp  engine.hpp
src/event_log/: event_log.cpp  event_log.hpp
src/logger/: logger.cpp  logger.hpp
src/protocol/: messages.cpp  messages.hpp
src/socket/: socket.cpp  socket.hpp  socket_pool.cpp  socket_pool.hpp  stream_socket.cpp  stream_socket.hpp
src/state/: state.hpp
static/: index.html  out.js  style.css
